<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:background="#FAFAFAFA"
    android:padding="10dp">

    <TextView
        android:id="@+id/cartTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cart"
        android:textSize="30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/cartTotalLabel"
        app:layout_constraintBottom_toTopOf="@+id/placeOrder"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/cartTotal"
        app:layout_constraintBottom_toTopOf="@+id/placeOrder"
        app:layout_constraintStart_toEndOf="@+id/cartTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:text="50,00"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/cartTotalEuroSymbol"
        app:layout_constraintBottom_toTopOf="@+id/placeOrder"
        app:layout_constraintStart_toEndOf="@+id/cartTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur_symbol"
        android:textSize="30sp" />
    <Button
        android:id="@+id/placeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/place_order"/>
</androidx.constraintlayout.widget.ConstraintLayout>
