<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="#FAFAFAFA"
    android:padding="10dp">

    <ImageView
        android:id="@+id/bookListItemCover"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/the_book_s_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxEms="9"
        android:singleLine="false"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/bookListItemCover"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title of the Book here" />

    <Button
        android:id="@+id/removeOneItemButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/cartItemTitle"
        app:layout_constraintStart_toEndOf="@id/bookListItemCover"
        android:text="@string/minus_symbol"/>
    <TextView
        android:id="@+id/numberOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/cartItemTitle"
        app:layout_constraintStart_toEndOf="@id/removeOneItemButton"
        tools:text="1" />
    <Button
        android:id="@+id/addOneItemButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/cartItemTitle"
        app:layout_constraintStart_toEndOf="@id/numberOfItems"
        android:text="@string/plus_symbol"/>

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cartItemTitle"
        app:layout_constraintStart_toEndOf="@+id/addOneItemButton"
        tools:text="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur_symbol"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cartItemTitle"
        app:layout_constraintStart_toEndOf="@+id/itemPrice" />
    <Button
        android:id="@+id/removeProductButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete_symbol"/>


</androidx.constraintlayout.widget.ConstraintLayout>
