<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#FAFAFAFA"
        android:padding="10dp">

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/the_book_s_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxEms="9"
            android:singleLine="false"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/bookCover"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title of the Book here" />

        <TextView
            android:id="@+id/bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bookCover"
            tools:text="50"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/bookPrice"
            app:layout_constraintBottom_toBottomOf="@id/bookPrice"
            android:textSize="20sp"
            android:text="@string/eur_symbol"/>

        <Button
            android:id="@+id/bookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_basket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/synopsis"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:id="@+id/bookSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:singleLine="false"
            android:textSize="20sp"
            tools:text="Lorem ipsum dolor sit amet..." />
    </ScrollView>
</LinearLayout>
